<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <EditText
            android:id="@+id/nameEditText"
            android:maxLines="1"
            android:maxLength="42"
            android:inputType="textCapWords"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:hint="@string/edit_text_name_placeholder"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="8sp"
            android:text="@string/toppings"
            android:textColor="#9E9E9E"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/add_whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:onClick="boxIsChecked"
            android:textSize="16sp"
            />

        <CheckBox
            android:id="@+id/add_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:onClick="boxChocoIsChecked"
            android:textSize="16sp"
            />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:textColor="#9E9E9E"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/quantity_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:onClick="decrement"
                android:text="-"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:onClick="increment"
                android:text="+"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Delete these 2 views below -->
        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="Order Summary"
            android:textAllCaps="true"
            android:textColor="#9E9E9E"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/order_summary_text_view_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="$0.00"
            android:textColor="#000000"
            android:textSize="16sp" /> -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/submit_order"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>